--- a/FinanceiroWeb/WebContent/WEB-INF/web.xml
+++ b/FinanceiroWeb/WebContent/WEB-INF/web.xml
@@ -28,7 +28,8 @@
 			Development
 			UnitTest
 			SystemTest
-			Extension-->
+			Extension
+	-->
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
@@ -41,5 +42,14 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<filter>
+		<filter-name>conexaoFilter</filter-name>
+		<filter-class>financeiro.web.filter.ConexaoHibernateFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>conexaoFilter</filter-name>
+		<url-pattern>*.jsf</url-pattern>
+	</filter-mapping>
 		
 </web-app>
